--- a/HeardHospitality/HeardHospitality/Views/Profile/UpdateProfile.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Profile/UpdateProfile.cshtml
@@ -9,7 +9,7 @@
 <div class="text-center">
     <h1 class="display-4">Update Profile</h1>
 
-          <a class="navbar-brand" asp-area="" asp-controller="Profile" asp-action="UpdateWorkHistory">Update Work History</a>
+          <a class="navbar-brand" asp-area="" asp-controller="Profile" asp-action="AddEmployeeExperience">Update Work History</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
 
 
 
-    <form asp-action="Edit" method="post">
+    <form asp-controller="Profile" asp-action="Edit" method="post">
 
         <input placeholder="First Name" asp-for="FirstName" />
         <br />
