--- a/HeardHospitality/HeardHospitality/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HeardHospitality/HeardHospitality/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using HeardHospitality.Areas.Identity.Pages.Account
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -12,36 +13,9 @@
             <h2>Create a new account.</h2>
             <hr />
 
-
-
-
-
-
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-@*            <div class="form-floating">
-                <input type="checkbox" asp-for="Input.isBusinessAccount" class="form-control" aria-required="true" />
-                <label asp-for="Input.isBusinessAccount"></label>
-                <span asp-validation-for="Input.isBusinessAccount" class="text-danger"></span>
-            </div>       *@
-            <div class="form-floating">
-                <input type="checkbox" asp-for="Input.isBusinessAccount"/>
-                <label asp-for="Input.isBusinessAccount"></label>
-                <span asp-validation-for="Input.isBusinessAccount" class="text-danger"></span>
-            </div>
-@*            <div class="form-floating">
-                <input type="checkbox" asp-for="Input.isEmployeeAccount" class="form-control" aria-required="true" />
-                <label asp-for="Input.isEmployeeAccount"></label>
-                <span asp-validation-for="Input.isEmployeeAccount" class="text-danger"></span>
-            </div>*@
 
-            <div class="form-floating">
-                <input type="checkbox" asp-for="Input.isEmployeeAccount"/>
-                <label asp-for="Input.isEmployeeAccount"></label>
-                <span asp-validation-for="Input.isEmployeeAccount" class="text-danger"></span>
-            </div>
-            <br />
-            <br />
-            <br />
+
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email"></label>
@@ -57,7 +31,66 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
+            @if (Model.isEmployeeAccount == true)
+            {
+                <div class="form-floating">
+                    <input type="checkbox" asp-for="Input.isEmployeeAccount" hidden="hidden" checked />
+                </div>
+
+                <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
+            }
+
+            @if (Model.isBusinessAccount == true)
+            {
+                <div class="form-floating">
+                    <input type="checkbox" asp-for="Input.isBusinessAccount" hidden="hidden" checked />
+                </div>
+
+                <p><a class="w-100 btn btn-lg btn-primary" onclick="javascript:ShowHide('HiddenDiv')">Continue</a></p>
+                <div class="mid" id="HiddenDiv" style="display: none;">
+                    <div class="form-floating">
+                        <input asp-for="Input.BusinessName" class="form-control" autocomplete="business-name" aria-required="true" />
+                        <label asp-for="Input.BusinessName"></label>
+                        <span asp-validation-for="Input.BusinessName" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating">
+                        <input asp-for="Input.PhoneNum" class="form-control" autocomplete="phonenumber" aria-required="true" />
+                        <label asp-for="Input.PhoneNum"></label>
+                        <span asp-validation-for="Input.PhoneNum" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating">
+                        <input asp-for="Input.City" class="form-control" autocomplete="city" aria-required="true" />
+                        <label asp-for="Input.City"></label>
+                        <span asp-validation-for="Input.City" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating">
+                        <input asp-for="Input.County" class="form-control" autocomplete="county" aria-required="true" />
+                        <label asp-for="Input.County"></label>
+                        <span asp-validation-for="Input.County" class="text-danger"></span>
+                    </div>
+
+
+                    <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Submit</button>
+
+                </div>
+                <script type="text/javascript">
+                    // <![CDATA[
+                    function ShowHide(divId) {
+                        if (document.getElementById(divId).style.display == 'none') {
+                            document.getElementById(divId).style.display = 'block';
+                        }
+                        else {
+                            document.getElementById(divId).style.display = 'none';
+                        }
+                    }
+                                                            // ]]></script>
+
+
+            }
+
+
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
@@ -69,8 +102,10 @@
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                article
+                                about setting up this ASP.NET application to support logging in via external services
+                            </a>.
                         </p>
                     </div>
                 }
