--- a/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using System
+@inject SignInManager<LoginDetail> SignInManager
+@inject UserManager<LoginDetail> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -23,6 +28,23 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                     </ul>
+
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="UpdateProfile">Profile</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Businesses">View Businesses</a>
+                            </li>
+                        </ul>
+
+                    }
+
+
                     <partial name="_LoginPartial" />
                 </div>
             </div>
