--- a/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
@@ -46,14 +46,18 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="Index">Jobs</a>
                             </li>
                         </ul>
+
+
+                    }
+
+                    @if (User.IsInRole("BUSINESSUSER"))
+                    {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="AddJob">Add New Job Ad</a>
                             </li>
                         </ul>
-
                     }
-
 
                     <partial name="_LoginPartial" />
                 </div>
