Delete job posts, report job posts, partial authorization implementation
-Businesses can delete their own job postings
-Only employees (not businesses) can report job listings
-Only employees can leave ratings
-Pop up to confirm want to delete job (& cascade delete JobPerk & reportedjobdetail
-Employees can only report a job once per ad

--- a/HeardHospitality/HeardHospitality/Views/Home/Businesses.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Home/Businesses.cshtml
@@ -44,7 +44,7 @@
             @foreach (var business in Model)
             {
 
-                <tr >
+                <tr>
                     <td>
                         @business.BusinessName
                     </td>
@@ -72,9 +72,12 @@
                     <td onclick="location.href= '@Url.Action("All", "Rating", new { busID=business.BusinessID })'">
                         VIEW ALL RATINGS
                     </td>
-                    <td onclick="location.href= '@Url.Action("New", "Rating", new { busID=business.BusinessID })'">
-                        Leave Rating
-                    </td>
+                    @if (User.IsInRole("employeeuser"))
+                    {
+                        <td onclick="location.href= '@Url.Action("New", "Rating", new { busID=business.BusinessID })'">
+                            Leave Rating
+                        </td>
+                    }
                 </tr>
             }
 
