--- a/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
@@ -36,6 +36,16 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="UpdateProfile">Profile</a>
                             </li>
                         </ul>
+
+                        @if (User.IsInRole("businessuser"))
+                        {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Rating" asp-action="MyRatings">My Ratings</a>
+                                </li>
+                            </ul>
+                        }
+
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Businesses">View Businesses</a>
@@ -44,21 +54,28 @@
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="Index">Jobs</a>
+
                             </li>
                         </ul>
 
 
-                    }
 
-                    @if (User.IsInRole("BUSINESSUSER"))
-                    {
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="AddJob">Add New Job Ad</a>
-                            </li>
-                        </ul>
-                    }
 
+                        @if (User.IsInRole("businessuser"))
+                        {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="AddJob">Add New Job Ad</a>
+                                </li>
+                            </ul>
+
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="ViewBusinessJobs">View My Job Ads</a>
+                                </li>
+                            </ul>
+                        }
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
