--- a/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
@@ -9,9 +9,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HeardHospitality</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HeardHospitality.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
 </head>
 <body>
     <header>
@@ -53,11 +54,16 @@
                         </ul>
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="Index">Jobs</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="Index">All Jobs</a>
 
                             </li>
                         </ul>
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Job" asp-action="SearchJob">Search Jobs</a>
 
+                            </li>
+                        </ul>
 
 
 
