--- a/HeardHospitality/HeardHospitality/wwwroot/css/site.css
+++ b/HeardHospitality/HeardHospitality/wwwroot/css/site.css
@@ -1,18 +1,35 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
+}
+
+@font-face {
+    font-family: 'Roboto-Light';
+    src: url('../fonts/Roboto-Light.ttf') format('truetype');
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Roboto-Light', serif;
+}
+
+.job-listing {
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+h3 {
+    font-size: 42px;
+    text-align: left;
+    display: inline;
 }
